--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Datasource and Postgres settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/courseservice
-spring.datasource.username=user
+spring.datasource.username=rossbuchan
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
